@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX ipsec.service 586 SHA256 f955e55f12bc3981e1339d98598c900eeb41645c5be188bb85e637c8136937e6 SHA512 4056dc181f8870729e5db35b8db0f1b06ae24e33a4a915348113af85b446b8e20a876d0efcf28ce6690726c473510ce096ff11035f2b4cdb13adb721e2de5837 WHIRLPOOL 08adfad1c6d4ed3e02f53a2221be50ddb414553f61945bf5b4ea85b126321f560a12ece70c461ba7fa663a13cf5c0c4f4eb8ecfb1c99cd6b3b268c05a88aacda
 AUX libreswan-3.7-curl.patch 1203 SHA256 7b9cabe9672f6947e5711eb28b7424d129bc66b50e4605ecdffa21975a73cfb0 SHA512 ffff827023f1c8d630f0061791e82deb1a225ce8401729da645f0d6d15f1da0fa111367443657c0634149a01112be38bca2a061783ce5571be92ba3ade46b110 WHIRLPOOL 85b2be91c43585b55bcd70d4e47ae4d27cb5be6fc552a39e6d5f9eb26260b1139bc992cf001b51f6cdfe3ad3da73b2866468885385fd280a1b0742a3dde11081
 AUX libreswan-3.7-openrc.patch 715 SHA256 e7d27044abee79f1ebbade2b44826abcab323036cdaa79d0109708cb25266eef SHA512 d5c2c3c7a30a15c8d1cc274ac382763f2baa11ec852c4b8b5f659809c0483d91cfe641a201d6224dd643a0329ad772658139a5e5ace6c3744f26d55e74485207 WHIRLPOOL f096f6d2d70696de779c6be62112abf31ed9f9e1ae5325a620ef5ece980e191c7fb144a042b0aebf088ba0733b32f51feee73eeb066da28c570b4754ad48d6af
 DIST libreswan-3.7.tar.gz 11135078 SHA256 7d62d11d30d3b7a4c011dfff4385e0eb778d99ccb2cdf2e8c35b37b34bd156c9 SHA512 b612d956ac4fe1dc102898e5a0a500a0a855654cd30363cae41d4ef4bcb9091c8f058a962ceab1c00348e301b17258f31b6814120c4578d6a119abede30ecff3 WHIRLPOOL 171014eef323a2d49019452f1bb429f76ca091f736e567aea906a3e811fc9c3b67794ec6c42ee6513b4087bb94c44776051b7e975224ddbae1bedfe26bf64c6f
-EBUILD libreswan-3.7.ebuild 2284 SHA256 419a54780447b8038a5df79baf3892c65b457fa20a192d970f361c9622560c23 SHA512 db4b7c67831099a834a91391b7618af14089c9c1b24189498dccd345af472d11411f9be7e588a9243acb61c701e062d3ca67db32faf7a541a3c0eac659978b34 WHIRLPOOL 56fa41d27d8c9c0d0ce5812328eaf4752482e06b6a7323fccc0d6991605852f1b332623c30b8283cb8ce10e69a9b3c408cad5cfc69c8622d357ab3c3e93fef13
-EBUILD libreswan-9999.ebuild 2189 SHA256 6a09d2f9d2e62715c939bda279e4c292bf884b2003261ddd1ddd50055626da2c SHA512 240b2df98ddbea25ff84b7cb9ec1900078232b376d5aa4f44e3762bc9e9b52f6483ad3528966e7d7d8dbdf5e64b611187530cd2d6ef7fa4b5e4a9ca4c419a1ae WHIRLPOOL 3d092b3283b9ca051660a08ee0ed04b4f311b2c71167e112e2e35cd231e327b791b4c6c787a7c1ca351108936bfbbea79ad8aee88e9f3d929002ebef24848a10
-MISC ChangeLog 842 SHA256 b2b5efe4b3164ca9ec172ef1ef36f21b1fcad002c6856f24fa79d84b866c65cb SHA512 401ce0fb71590181e1ea7a773d683ece99b5459d960263e45a19311681a20e7a56b91dafce6b5048fd356787c0aa27e6343acdb56dbdb6831026590503a07a0d WHIRLPOOL ffef0c1394200067f8805189dcf17093cf1271de5b4d44630c4d262725ebc9453bda45e90b74a7f1af646f747e42ca9abc3bc415b0d4d8fc7c1861cde081a79b
+EBUILD libreswan-3.7.ebuild 2298 SHA256 efc3446c6195e11e0f2f47da2d6b33c56b34ba6bb8ca93c7c3829ec5f1b4359e SHA512 5f8e599357de1074ab0da054edb7d5203aec446267d4afde812f726f96846a6b0212092dd8c852e3d5d66eb4101338bf2da13875513b98ecbb1308e7e672d3c5 WHIRLPOOL 6e98b959a51c62c1f6f05f88b36efcee2eb4ae582306f83e9f3ea3c29acdbc86301a9cac99f91bd2327b7385f8dac94520b1bcca74f46fb3e2c532f410717227
+EBUILD libreswan-9999.ebuild 2203 SHA256 d34bb42a1ba9a3496438bcf6a0bc6225014e3db84644173d0e5857714a04d64b SHA512 e6055a4f3d046673a78659a8f9d130c257affd7d6ae344e3c01fb0b49271bbdbf8d25d3f44f18eac1a1baa92c9b9cc2a604b221130dad5d067009228d3db28fa WHIRLPOOL e76b275d3b2efe1252ff3b62173844bbde257030d13a9a05f111da6d6045cea875a7aa047a500115576a7e1c25399ea9456631e93bd1f603f3099f695def403e
+MISC ChangeLog 986 SHA256 12613ea354e98b89cb44ea288d41d67a938851bdf75920c989a06dc5b0d3451d SHA512 f000ca72edb1a703fb8f55481d26b3c3ba4b042ee85c37297620cbcaa2c65daf8dbb2d8476d32b24c3da51462ea1ff83f0538d4c0154fb789ff2249cd126bb4f WHIRLPOOL 5b9984210b431f6cc0075b720b901c8267e92af0a102d781fdd3b1d152a10f100a1d7be2a30d5d4d2abeefe796d0c3fc2db007ebec77db1883dac966c18156f9
 MISC metadata.xml 333 SHA256 67feaa165896cbd8fc1b66e6125fc3d1c6e2d4762d64947c29eb2ed6b6c776bf SHA512 0ae4eb151a586776a6c8f2bcc6f1d91fd73c32836bb15f57114fe72826a4773b297927ca7827d0b9f8972ee7ee43b1eebf587fdb3a138589cbd8a5ccb4b8b0c4 WHIRLPOOL 42a1123953ce36714fd67b269041657c620400a0f397d0dbec1150428f9d78b1a61cc4d70a2cada1104df6a30b577759361265b14d452f510e822763a808291c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlLLBAkACgkQC77qH+pIQ6Ts0wEArDI91PQxIS78ZoHyAPxkNSSl
+2gnLILsyKcnXPfwgcikA/1Vwmj8oJgovcvp+n1qUhUNe9Hfz0/teOlF6WOIuiaOw
+=oR3s
+-----END PGP SIGNATURE-----
