@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/libreswan
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/libreswan/ChangeLog,v 1.3 2014/01/06 04:57:13 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/libreswan/ChangeLog,v 1.4 2014/01/06 19:29:12 floppym Exp $
+
+  06 Jan 2014; Mike Gilbert <floppym@gentoo.org> libreswan-3.7.ebuild,
+  libreswan-9999.ebuild:
+  Only require dev-libs/nss[utils] in RDEPEND.
 
   06 Jan 2014; Mike Gilbert <floppym@gentoo.org> libreswan-3.7.ebuild,
   libreswan-9999.ebuild:
